syntax = "proto3";
package alfred.account.v1;

option go_package = "/pb";

import "google/protobuf/empty.proto";
import "google/api/annotation.proto";
import "include/graphql.proto";
import "validate/validate.proto";

//Private Service
service AccountInternal {
    //CreateAccount create new account of a user
    rpc CreateAccount(CreateAccountRequest) returns (Account);
}

message CreateAccountRequest {
    Account account = 1 [(validate.rules).message.required = true];
}

message Account {
    //id generated by uuid
    string id = 1;
    // multiple account identify by slug on ui
    string slug = 2;
    // userId of a user
    string user_id = 3 [(validate.rules).string.min_len = 3, (graphql.field) = {required: true}];
}
